networking/networkpolicy/allow-all.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-all
spec:
  podSelector: {}
  ingress:
  - {}
