networking/networkpolicy/allow-from-label.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-from-red
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          type: red
