networking/networkpolicy/allow-local.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-local
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
