networking/networkpolicy/allow-namespace-and-pod.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-ns-and-pod
spec:
  podSelector:
    matchLabels:
      name: test-pods
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            team: operations
        podSelector:
          matchLabels:
            name: test-pods
