networking/networkpolicy/allow-port.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-tcp
spec:
  podSelector: {}
  ingress:
  - ports:
    - protocol: TCP
      port: 8888
