networking/networkpolicy/allow-project.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-from-blue
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: blue
