networking/networkpolicy/allow-to-label.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-to-blue
spec:
  podSelector:
    matchLabels:
      type: blue
  ingress:
  - {}
