networking/networkpolicy/egress-default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: egress-default-deny
spec:
  policyTypes: ["Egress"]
  podSelector: {}
