networking/networkpolicy/ignore-egress-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: test-ignore-egress-1
spec:
  podSelector: {}
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  egress:
  - ports:
    - port: 8080
      protocol: TCP
